# pgn2scid_v2

./: .gitignore  LICENSE  README.md  pyproject.toml
src/main/python/: app_init.py  config.py  main.py  main.ui  ui_init.py
src/main/python/tests/unit/: load_ui_test.py
src/main/python/ui/: pgn2scid.ui
src/pgn2scid_v2/: gui.py  initapp.py  main.py  main.pyw  main.ui  pgn2scid.toml
tests/: test_initapp.py  test_pgn2scid_v2.py
