[tool.poetry]
name = "pgn2scid_v2"
version = "2.0.1a0"
description = "pgn2scid V2"
authors = ["Andreas Kreisig <andreaskreisig@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "pgn2scid_v2", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pyside6 = "^6.4.1"
tomli-w = "^1.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
